// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly unknow theme type and fallback to defaults 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="unknow-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly unknow variant and fallback to standard 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="warning-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant beta 1`] = `
<DocumentFragment>
  .cache-121xbfc {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffefe6;
  color: #ff8c69;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="beta-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-121xbfc e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant filled 1`] = `
<DocumentFragment>
  .cache-1s52m9c {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ef5774;
  color: #fff;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="warning-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-1s52m9c e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-11br9be {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #e4edff;
  color: #3f6ed8;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="info-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-11br9be e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant outlined 1`] = `
<DocumentFragment>
  .cache-elz115 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  border: 1px solid #ef5774;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="warning-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-elz115 e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant standard 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="warning-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant success 1`] = `
<DocumentFragment>
  .cache-x1wlg5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #cdfcf1;
  color: #45d6b5;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="success-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-x1wlg5 e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M20,12A8,8 0 0,1 12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4C12.76,4 13.5,4.11 14.2,4.31L15.77,2.74C14.61,2.26 13.34,2 12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12M7.91,10.08L6.5,11.5L11,16L21,6L19.59,4.58L11,13.17L7.91,10.08Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant transparent 1`] = `
<DocumentFragment>
  .cache-rvu1ij {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: transparent;
  color: #ef5774;
  padding: 12px 0;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="warning-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-rvu1ij e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant warning 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="warning-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with custom icon 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="warning-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="warning-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with title 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-372yw {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  color: inherit;
}

.cache-372yw.cache-372yw {
  margin-left: 16px;
}

.cache-n6ee2f {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-n6ee2f.cache-n6ee2f {
  margin-left: 16px;
}

<div
    aria-label="warning-6c756c756c756c756c756c756c756c75"
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
    role="region"
  >
    <svg
      aria-hidden="true"
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-372yw e7ah3bn0"
      >
        title
      </p>
      <p
        class="e1g1zfwd0 cache-n6ee2f e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;
